# task-master

./: Dockerfile  README.md  pyproject.toml
common/: models.py
task/: models.py  serializers.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_task_created_by.py
task_master/: asgi.py  settings.py  urls.py  wsgi.py
team/: models.py
team/migrations/: 0001_initial.py
