[project]
name = "task-master"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "django>=5.0.7",
    "psycopg2-binary>=2.9.9",
    "django-model-utils>=4.5.1",
    "djangorestframework>=3.15.2",
    "django-extensions>=3.2.3",
    "ipython>=8.26.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "httpie>=3.2.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/task_master"]
